--- a/1.2 simulated_data_wt_interaction.qmd
+++ b/1.2 simulated_data_wt_interaction.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Centered algorithm with simulated data, with interaction"
 author: "Juan Li"
-date: 2025-08-11
+date: 2025-08-13
 format: 
   html:
     toc: true
@@ -146,308 +146,219 @@ head(data)
 
 # Interaction of two categorical variables: `x1`, `x2`
 
--   With direct centering (see **Scenario 1** below), the intercept is very close to $\overline{y}$, but not identical.
+-   There is an older version talking about direct centering and conditional centering, for details, see the .qmd file with the same name in the "backup" folder.
 
--   From below code, it can be seen that we should do *conditional centering* on one of the categorical variables, while do the other one with *direct centering* (no matter the order, see **Scenario 3** and **Scenario 4**), but **should NOT do *conditional centering* on both variables** (see **Scenario 2**).
+    -   Note: with conditional centering, other coefficients except for intercept (which is equal to $\overline{y}$) are affected.
 
--   With the proper centering (considering the interaction term), the intercept is equal to $\overline{y}$. But the coefficients of non-interaction terms are affected as well.
+-   Here, the idea is to unpack the interaction and add the interaction terms, then do centering on all terms.
+
+    -   intercept == $\overline{y}$ is achieved
+
+    -   the rest coefficients stay the same as in the original model
 
 ```{r}
 #| warning: false
 #| message: false
 
-# -------- direct centering -------- 
-# centering x1
-prop.table(table(data$x1))
-(x1_mean <- mean(data$x1_cat2))
-data <- data %>%
-  mutate(x1_cat2_C_dir = x1_cat2 - x1_mean)
-
-# centering x2
-(x2_cat2_mean <- mean(data$x2_cat2))
-(x2_cat3_mean <- mean(data$x2_cat3))
+# -------- add interaction terms --------
 data <- data %>%
   mutate(
-    x2_cat2_C_dir = x2_cat2 - x2_cat2_mean, 
-    x2_cat3_C_dir = x2_cat3 - x2_cat3_mean
+    x1_cat2_by_x2_cat2 = x1_cat2 * x2_cat2,
+    x1_cat2_by_x2_cat3 = x1_cat2 * x2_cat3
   )
 
-# -------- conditional centering -------- 
-# centering x1 considering x2
-(x1_mean_1 <- mean(data$x1_cat2[which(data$x2 == 'x2_cat1')]))
-(x1_mean_2 <- mean(data$x1_cat2[which(data$x2 == 'x2_cat2')]))
-(x1_mean_3 <- mean(data$x1_cat2[which(data$x2 == 'x2_cat3')]))
+# -------- centering each term --------
 data <- data %>%
   mutate(
-    x1_cat2_C_cnd = case_when(
-      x2 == 'x2_cat1' ~ x1_cat2 - x1_mean_1,
-      x2 == 'x2_cat2' ~ x1_cat2 - x1_mean_2,
-      x2 == 'x2_cat3' ~ x1_cat2 - x1_mean_3
-    )
+    x1_cat2_C = x1_cat2 - mean(data$x1_cat2),
+    x2_cat2_C = x2_cat2 - mean(data$x2_cat2),
+    x2_cat3_C = x2_cat3 - mean(data$x2_cat3),
+    x1_cat2_by_x2_cat2_C = x1_cat2_by_x2_cat2 - mean(data$x1_cat2_by_x2_cat2),
+    x1_cat2_by_x2_cat3_C = x1_cat2_by_x2_cat3 - mean(data$x1_cat2_by_x2_cat3)
   )
 
-# centering x2 considering x1
-(x2_cat2_mean_1 <- mean(data$x2_cat2[which(data$x1 == 'x1_cat1')]))
-(x2_cat2_mean_2 <- mean(data$x2_cat2[which(data$x1 == 'x1_cat2')]))
-(x2_cat3_mean_1 <- mean(data$x2_cat3[which(data$x1 == 'x1_cat1')]))
-(x2_cat3_mean_2 <- mean(data$x2_cat3[which(data$x1 == 'x1_cat2')]))
-data <- data %>%
-  mutate(
-    x2_cat2_C_cnd = case_when(
-      x1 == 'x1_cat1' ~ x2_cat2 - x2_cat2_mean_1,
-      x1 == 'x1_cat2' ~ x2_cat2 - x2_cat2_mean_2
-    ),
-    x2_cat3_C_cnd = case_when(
-      x1 == 'x1_cat1' ~ x2_cat3 - x2_cat3_mean_1,
-      x1 == 'x1_cat2' ~ x2_cat3 - x2_cat3_mean_2
-    )
-  )
-
-# --- linear regression model on original variables: 'x1', 'x2' ---
+# --- linear regression model on original variables ---
 fit <- lm(y ~ x1 * x2, data = data)
 coef(fit)
 
-# --- linear regression model on original variables: 'x1', 'x2', but with dummy vars ---
+# --- linear regression model on original variables, but unpacked ---
 # to confirm it's the same as above
-fit <- lm(y ~ x1_cat2 * x2_cat2 + x1_cat2 * x2_cat3, data = data)
+fit <- lm(y ~ x1_cat2 + x2_cat2 + x2_cat3 + x1_cat2_by_x2_cat2 + x1_cat2_by_x2_cat3, data = data)
 coef(fit)
 
-# --- Scenario 1: linear regression model on direct centered variables ---"
+# --- linear regression model on centered variables ---"
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x1_cat2_C_dir * x2_cat2_C_dir + x1_cat2_C_dir * x2_cat3_C_dir, data = data)
-coef(fit)
-
-# --- Scenario 2: linear regression model on centered variables, considering each other ---"
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x1_cat2_C_cnd * x2_cat2_C_cnd + x1_cat2_C_cnd * x2_cat3_C_cnd, data = data)
-coef(fit)
-
-# --- Scenario 3: linear regression model on centered variables: x1 with direct centering, x2 with conditional centering ---"
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x1_cat2_C_dir * x2_cat2_C_cnd + x1_cat2_C_dir * x2_cat3_C_cnd, data = data)
-coef(fit)
-
-# --- Scenario 4: linear regression model on centered variables: x1 with conditional centering, x2 with direct centering ---"
-# to confirm it's the same as above
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x1_cat2_C_cnd * x2_cat2_C_dir + x1_cat2_C_cnd * x2_cat3_C_dir, data = data)
+fit <- lm(y ~ x1_cat2_C + x2_cat2_C + x2_cat3_C + x1_cat2_by_x2_cat2_C + x1_cat2_by_x2_cat3_C, data = data)
 coef(fit)
 ```
 
 # Interaction of one categorical variable and one continuous variabl (no rcs): `x2`, `x3`
 
--   With direct centering (see **Scenario 1** below), the intercept is very close to $\overline{y}$, but not identical.
+-   There is an older version talking about direct centering and conditional centering, for details, see the .qmd file with the same name in the "backup" folder.
 
--   From below code, it can be seen that we should do *conditional centering* on the continuous variable, while do *direct centering* on the categorical variable (see **Scenario 2**).
+    -   Note: with conditional centering, other coefficients except for intercept (which is equal to $\overline{y}$) are affected.
 
--   With the proper centering (considering the interaction term), the intercept is equal to $\overline{y}$. But the coefficients of non-interaction terms are affected as well.
+-   Here, the idea is to unpack the interaction and add the interaction terms, then do centering on all terms.
+
+    -   intercept == $\overline{y}$ is achieved
+
+    -   the rest coefficients stay the same as in the original model
 
 ```{r}
 #| warning: false
 #| message: false
 
-# -------- direct centering -------- 
-# centering x3 
-(x3_mean <- mean(data$x3))
-data <- data %>%
-  mutate(x3_C_dir = x3 - x3_mean)
-
-# -------- conditional centering -------- 
-# centering x3 considering x2
-(x3_mean_1 <- mean(data$x3[which(data$x2 == 'x2_cat1')]))
-(x3_mean_2 <- mean(data$x3[which(data$x2 == 'x2_cat2')]))
-(x3_mean_3 <- mean(data$x3[which(data$x2 == 'x2_cat3')]))
+# -------- add interaction terms --------
 data <- data %>%
   mutate(
-    x3_C_cnd = case_when(
-      x2 == 'x2_cat1' ~ x3 - x3_mean_1,
-      x2 == 'x2_cat2' ~ x3 - x3_mean_2,
-      x2 == 'x2_cat3' ~ x3 - x3_mean_3
-    )
+    x2_cat2_by_x3 = x2_cat2 * x3,
+    x2_cat3_by_x3 = x2_cat3 * x3
   )
 
-# --- linear regression model on original variables: 'x2', 'x3' ---
+# -------- centering each term --------
+data <- data %>%
+  mutate(
+    x3_C = x3 - mean(data$x3),
+    x2_cat2_by_x3_C = x2_cat2_by_x3 - mean(data$x2_cat2_by_x3),
+    x2_cat3_by_x3_C = x2_cat3_by_x3 - mean(data$x2_cat3_by_x3)
+  )
+
+# --- linear regression model on original variables ---
 fit <- lm(y ~ x2 * x3, data = data)
 coef(fit)
 
-# --- linear regression model on original variables: 'x2', 'x3', but with dummy vars ---
+# --- linear regression model on original variables, but unpacked ---
 # to confirm it's the same as above
-fit <- lm(y ~ x2_cat2 * x3 + x2_cat3 * x3, data = data)
+fit <- lm(y ~ x2_cat2 + x2_cat3 + x3 + x2_cat2_by_x3 + x2_cat3_by_x3, data = data)
 coef(fit)
 
-# --- Scenario 1: linear regression model on direct centered variables ---"
+# --- linear regression model on centered variables ---"
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x2_cat2_C_dir * x3_C_dir + x2_cat3_C_dir * x3_C_dir, data = data)
-coef(fit)
-
-# --- Scenario 2: linear regression model on centered variables:  x2 with direct centering, x3 with conditional centering ---"
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x2_cat2_C_dir * x3_C_cnd + x2_cat3_C_dir * x3_C_cnd, data = data)
+fit <- lm(y ~ x2_cat2_C + x2_cat3_C + x3_C + x2_cat2_by_x3_C + x2_cat3_by_x3_C, data = data)
 coef(fit)
 ```
 
 # Interaction of two continuous variabl (no rcs): `x3`, `x5`
 
--   There are two methods to center the interaction term:
-
-    -   product of the two centered variables: `x3_C * x5_C` (see **Scenario 1**, **Scenario 2**)
-
-    -   center the original interaction term: `x3_x5_interaction - x3_x5_interaction_mean` (see **Scenario 3**)
-
--   Below code confirms that the second method is the correct one
-
 ```{r}
 #| warning: false
 #| message: false
 
-# direct centering x5
-(x5_mean <- mean(data$x5))
-data <- data %>%
-  mutate(x5_C_dir = x5 - x5_mean)
-
-# centering x3*x5: two methods
-(x3_x5_interaction_mean <- mean(data$x3_x5_interaction))
+# -------- add interaction terms --------
 data <- data %>%
   mutate(
-    x3_x5_interaction_C = x3_C_dir * x5_C_dir,
-    x3_x5_interaction_C2 = x3_x5_interaction - x3_x5_interaction_mean
+    x3_by_x5 = x3 * x5
   )
 
-# --- linear regression model on original variables: 'x3', 'x5' ---
+# -------- centering each term --------
+data <- data %>%
+  mutate(
+    x5_C = x5 - mean(data$x5),
+    x3_by_x5_C = x3_by_x5 - mean(data$x3_by_x5)
+  )
+
+# --- linear regression model on original variables ---
 fit <- lm(y ~ x3 * x5, data = data)
 coef(fit)
 
-# --- linear regression model on original variables: 'x3', 'x5', 'x3_x5_interaction' ---
+# --- linear regression model on original variables, but unpacked ---
 # to confirm it's the same as above
-fit <- lm(y ~ x3 + x5 + x3_x5_interaction, data = data)
+fit <- lm(y ~ x3 + x5 + x3_by_x5, data = data)
 coef(fit)
 
-# --- Scenario 1: linear regression model on direct centered variables 'x3_C_dir', 'x5_C_dir' ---"
+# --- linear regression model on centered variables ---
+# to confirm it's the same as above
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x3_C_dir * x5_C_dir, data = data)
-coef(fit)
-
-# --- Scenario 2: linear regression model on centered variables 'x3_C_dir', 'x5_C_dir', 'x3_x5_interaction_C' ---"
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x3_C_dir + x5_C_dir + x3_x5_interaction_C, data = data)
-coef(fit)
-
-# --- Scenario 3: linear regression model on centered variables 'x3_C', 'x5_C', 'x3_x5_interaction_C2' ---"
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x3_C_dir + x5_C_dir + x3_x5_interaction_C2, data = data)
+fit <- lm(y ~ x3_C + x5_C + x3_by_x5_C, data = data)
 coef(fit)
 ```
 
 # Interaction of one categorical variable and one continuous variabl (with rcs): `x2`, `x4`
 
 ```{r}
-# direct centering x4
-(x4_mean <- mean(data$x4))
-data <- data %>%
-  mutate(x4_C_dir = x4 - x4_mean)
-
-# centering the rcs terms of x4, considering x2
-(x_mean_1_cat1 <- mean(data$x4_rcs_1[which(data$x2 == 'x2_cat1')]))
-(x_mean_1_cat2 <- mean(data$x4_rcs_1[which(data$x2 == 'x2_cat2')]))
-(x_mean_1_cat3 <- mean(data$x4_rcs_1[which(data$x2 == 'x2_cat3')]))
-
-(x_mean_2_cat1 <- mean(data$x4_rcs_2[which(data$x2 == 'x2_cat1')]))
-(x_mean_2_cat2 <- mean(data$x4_rcs_2[which(data$x2 == 'x2_cat2')]))
-(x_mean_2_cat3 <- mean(data$x4_rcs_2[which(data$x2 == 'x2_cat3')]))
-
-(x_mean_3_cat1 <- mean(data$x4_rcs_3[which(data$x2 == 'x2_cat1')]))
-(x_mean_3_cat2 <- mean(data$x4_rcs_3[which(data$x2 == 'x2_cat2')]))
-(x_mean_3_cat3 <- mean(data$x4_rcs_3[which(data$x2 == 'x2_cat3')]))
-
+# -------- add interaction terms --------
 data <- data %>%
   mutate(
-    x4_rcs_1_C_cnd = case_when(
-      x2 == 'x2_cat1' ~ x4_rcs_1 - x_mean_1_cat1,
-      x2 == 'x2_cat2' ~ x4_rcs_1 - x_mean_1_cat2,
-      x2 == 'x2_cat3' ~ x4_rcs_1 - x_mean_1_cat3),
-    x4_rcs_2_C_cnd = case_when(
-      x2 == 'x2_cat1' ~ x4_rcs_2 - x_mean_2_cat1,
-      x2 == 'x2_cat2' ~ x4_rcs_2 - x_mean_2_cat2,
-      x2 == 'x2_cat3' ~ x4_rcs_2 - x_mean_2_cat3),
-    x4_rcs_3_C_cnd = case_when(
-      x2 == 'x2_cat1' ~ x4_rcs_3 - x_mean_3_cat1,
-      x2 == 'x2_cat2' ~ x4_rcs_3 - x_mean_3_cat2,
-      x2 == 'x2_cat3' ~ x4_rcs_3 - x_mean_3_cat3)
+    x2_cat2_by_x4_rcs_1 = x2_cat2 * x4_rcs_1,
+    x2_cat3_by_x4_rcs_1 = x2_cat3 * x4_rcs_1,
+    x2_cat2_by_x4_rcs_2 = x2_cat2 * x4_rcs_2,
+    x2_cat3_by_x4_rcs_2 = x2_cat3 * x4_rcs_2,
+    x2_cat2_by_x4_rcs_3 = x2_cat2 * x4_rcs_3,
+    x2_cat3_by_x4_rcs_3 = x2_cat3 * x4_rcs_3
+  )
+
+# -------- centering each term --------
+data <- data %>%
+  mutate(
+    x4_rcs_1_C = x4_rcs_1 - mean(data$x4_rcs_1),
+    x4_rcs_2_C = x4_rcs_2 - mean(data$x4_rcs_2),
+    x4_rcs_3_C = x4_rcs_3 - mean(data$x4_rcs_3),
+    x2_cat2_by_x4_rcs_1_C = x2_cat2_by_x4_rcs_1 - mean(data$x2_cat2_by_x4_rcs_1),
+    x2_cat3_by_x4_rcs_1_C = x2_cat3_by_x4_rcs_1 - mean(data$x2_cat3_by_x4_rcs_1),
+    x2_cat2_by_x4_rcs_2_C = x2_cat2_by_x4_rcs_2 - mean(data$x2_cat2_by_x4_rcs_2),
+    x2_cat3_by_x4_rcs_2_C = x2_cat3_by_x4_rcs_2 - mean(data$x2_cat3_by_x4_rcs_2),
+    x2_cat2_by_x4_rcs_3_C = x2_cat2_by_x4_rcs_3 - mean(data$x2_cat2_by_x4_rcs_3),
+    x2_cat3_by_x4_rcs_3_C = x2_cat3_by_x4_rcs_3 - mean(data$x2_cat3_by_x4_rcs_3)
   )
   
-# --- linear regression model on original variables: 'x2', 'rcs(x4, k_x4)' ---
+# --- linear regression model on original variables ---
 fit <- lm(y ~ x2 * rcs(x4, k_x4), data = data)
 coef(fit)
 
-# --- linear regression model on original variables 'x2', 'rcs(x4, k_x4)', but with dummy vars  ---
+# --- linear regression model on original variables, but unpacked ---
 # to confirm it's the same as above
-fit <- lm(y ~ x2_cat2 * rcs(x4, k_x4) + x2_cat3 * rcs(x4, k_x4), data = data)
+fit <- lm(y ~ x2_cat2 + x2_cat3 + x4_rcs_1 + x4_rcs_2 + x4_rcs_3 + 
+              x2_cat2_by_x4_rcs_1 + 
+              x2_cat3_by_x4_rcs_1 + 
+              x2_cat2_by_x4_rcs_2 + 
+              x2_cat3_by_x4_rcs_2 + 
+              x2_cat2_by_x4_rcs_3 + 
+              x2_cat3_by_x4_rcs_3, data = data)
 coef(fit)
 
-# --- linear regression model on original variables 'x2', 'rcs(x4, k_x4)', but with dummy vars and rcs terms ---
-# to confirm it's the same as above
-fit <- lm(y ~ x2_cat2 * x4_rcs_1 + x2_cat3 * x4_rcs_1 + x2_cat2 * x4_rcs_2 + x2_cat3 * x4_rcs_2 + x2_cat2 * x4_rcs_3 +
-          x2_cat3 * x4_rcs_3, data = data)
-coef(fit)
-
-# --- linear regression model on direct centered variables ---
+# --- linear regression model on centered variables ---
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x2_cat2_C_dir * rcs(x4_C_dir, k_x4) + x2_cat3_C_dir * rcs(x4_C_dir, k_x4), data = data)
-coef(fit)
-
-# --- linear regression model on centered variables:  x2 with direct centering, x4 terms with conditional centering ---
-paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x2_cat2_C_dir * x4_rcs_1_C_cnd + x2_cat3_C_dir * x4_rcs_1_C_cnd + 
-              x2_cat2_C_dir * x4_rcs_2_C_cnd + x2_cat3_C_dir * x4_rcs_2_C_cnd + 
-              x2_cat2_C_dir * x4_rcs_3_C_cnd + x2_cat3_C_dir * x4_rcs_3_C_cnd, data = data)
+fit <- lm(y ~ x2_cat2_C + x2_cat3_C + x4_rcs_1_C + x4_rcs_2_C + x4_rcs_3_C + 
+              x2_cat2_by_x4_rcs_1_C + 
+              x2_cat3_by_x4_rcs_1_C + 
+              x2_cat2_by_x4_rcs_2_C + 
+              x2_cat3_by_x4_rcs_2_C + 
+              x2_cat2_by_x4_rcs_3_C + 
+              x2_cat3_by_x4_rcs_3_C, data = data)
 coef(fit)
 ```
 
 # Interaction of two continuous variables (one with rcs, one without): `x3`, `x4`
 
 ```{r}
-# add the interaction columns
+# -------- add interaction terms --------
 data <- data %>% 
   mutate(
-    x3_x4_rcs_1_interaction = x3 * x4_rcs_1,
-    x3_x4_rcs_2_interaction = x3 * x4_rcs_2,
-    x3_x4_rcs_3_interaction = x3 * x4_rcs_3
+    x3_by_x4_rcs_1 = x3 * x4_rcs_1,
+    x3_by_x4_rcs_2 = x3 * x4_rcs_2,
+    x3_by_x4_rcs_3 = x3 * x4_rcs_3
   )
 
-# centering the rcs terms of x4
-(x4_rcs_1_mean <- mean(data$x4_rcs_1))
-(x4_rcs_2_mean <- mean(data$x4_rcs_2))
-(x4_rcs_3_mean <- mean(data$x4_rcs_3))
+# -------- centering each term --------
 data <- data %>%
   mutate(
-    x4_rcs_1_C_dir = x4_rcs_1 - x4_rcs_1_mean,
-    x4_rcs_2_C_dir = x4_rcs_2 - x4_rcs_2_mean,
-    x4_rcs_3_C_dir = x4_rcs_3 - x4_rcs_3_mean
+    x3_by_x4_rcs_1_C = x3_by_x4_rcs_1 - mean(data$x3_by_x4_rcs_1),
+    x3_by_x4_rcs_2_C = x3_by_x4_rcs_2 - mean(data$x3_by_x4_rcs_2),
+    x3_by_x4_rcs_3_C = x3_by_x4_rcs_3 - mean(data$x3_by_x4_rcs_3)
   )
 
-# centering the interaction terms
-(x3_x4_rcs_1_interaction_mean <- mean(data$x3_x4_rcs_1_interaction))
-(x3_x4_rcs_2_interaction_mean <- mean(data$x3_x4_rcs_2_interaction))
-(x3_x4_rcs_3_interaction_mean <- mean(data$x3_x4_rcs_3_interaction))
-data <- data %>%
-  mutate(
-    x3_x4_rcs_1_interaction_C = x3_x4_rcs_1_interaction - x3_x4_rcs_1_interaction_mean,
-    x3_x4_rcs_2_interaction_C = x3_x4_rcs_2_interaction - x3_x4_rcs_2_interaction_mean,
-    x3_x4_rcs_3_interaction_C = x3_x4_rcs_3_interaction - x3_x4_rcs_3_interaction_mean
-  )
-
-# --- linear regression model on original variables: 'x3', 'rcs(x4, k_x4)' ---
+# --- linear regression model on original variables ---
 fit <- lm(y ~ x3 * rcs(x4, k_x4), data = data)
 coef(fit)
 
-# --- linear regression model on original variables: 'x3', 'rcs(x4, k_x4)', but with rcs and interaction terms ---
+# --- linear regression model on original variables, but unpacked ---
 # to confirm it's the same as above
-fit <- lm(y ~ x3 + x4_rcs_1 + x4_rcs_2 + x4_rcs_3 + x3_x4_rcs_1_interaction + x3_x4_rcs_2_interaction + x3_x4_rcs_3_interaction, data = data)
+fit <- lm(y ~ x3 + x4_rcs_1 + x4_rcs_2 + x4_rcs_3 + x3_by_x4_rcs_1 + x3_by_x4_rcs_2 + x3_by_x4_rcs_3, data = data)
 coef(fit)
 
 # --- linear regression model on centered variables ---
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit <- lm(y ~ x3_C_dir + x4_rcs_1_C_dir + x4_rcs_2_C_dir + x4_rcs_3_C_dir + x3_x4_rcs_1_interaction_C + x3_x4_rcs_2_interaction_C + x3_x4_rcs_3_interaction_C, data = data)
+fit <- lm(y ~ x3_C + x4_rcs_1_C + x4_rcs_2_C + x4_rcs_3_C + x3_by_x4_rcs_1_C + x3_by_x4_rcs_2_C + x3_by_x4_rcs_3_C, data = data)
 coef(fit)
 ```
 
@@ -469,54 +380,51 @@ options(scipen = 999)
 fit.o <- lm(y ~ x1 + x2 + x3 + rcs(x4, k_x4) + x5 +
               x1*x2 + x2*x3 + x3*x5 + x2*rcs(x4, k_x4) + x3*rcs(x4, k_x4), data = data)
 coef(fit.o)
-(pred <- predict(fit.o, newdata = data[1:5,]))
 
-# original model
+# original model, but unpacked
 # confirm it's the same as above
-fit.o <- lm(y ~ x1*x2 + x2*x3 + x3*x5 + x2*rcs(x4, k_x4) + x3*rcs(x4, k_x4), data = data)
-coef(fit.o)
-(pred <- predict(fit.o, newdata = data[1:5,]))
+fit.o.2 <- lm(y ~ x1_cat2 + x2_cat2 + x2_cat3 + x3 + x4_rcs_1 + x4_rcs_2 + x4_rcs_3 + x5 +
+                  # interaction terms of x1 * x2
+                  x1_cat2_by_x2_cat2 + x1_cat2_by_x2_cat3 +
+                  # interaction terms of x2 * x3
+                  x2_cat2_by_x3 + x2_cat3_by_x3 +
+                  # interaction terms of x3 * x5
+                  x3_by_x5 +
+                  # interaction terms of x2 * rcs(x4, k_x4)
+                  x2_cat2_by_x4_rcs_1 + 
+                  x2_cat3_by_x4_rcs_1 + 
+                  x2_cat2_by_x4_rcs_2 + 
+                  x2_cat3_by_x4_rcs_2 + 
+                  x2_cat2_by_x4_rcs_3 + 
+                  x2_cat3_by_x4_rcs_3 +
+                  # interaction terms of x3 * rcs(x4, k_x4)
+                  x3_by_x4_rcs_1 + x3_by_x4_rcs_2 + x3_by_x4_rcs_3, data = data)
+coef(fit.o.2)
 
 # centered model
 paste0("Mean outcome in the dataset: ", mean(data$y))
-fit.c <- lm(y ~ 
-                # centered x1*x2
-                x2_cat2_C_dir * x1_cat2_C_cnd + x2_cat3_C_dir * x1_cat2_C_cnd + 
-                # centered x2*x3
-                x2_cat2_C_dir * x3_C_cnd + x2_cat3_C_dir * x3_C_cnd +
-                # centered x3*x5
-                x3_C_cnd + x5_C_dir + x3_x5_interaction_C2 +
-                # centered x2*rcs(x4, k_x4)
-                x2_cat2_C_dir * x4_rcs_1_C_cnd + x2_cat3_C_dir * x4_rcs_1_C_cnd + 
-                x2_cat2_C_dir * x4_rcs_2_C_cnd + x2_cat3_C_dir * x4_rcs_2_C_cnd + 
-                x2_cat2_C_dir * x4_rcs_3_C_cnd + x2_cat3_C_dir * x4_rcs_3_C_cnd +
-                # centered x3*rcs(x4, k_x4)
-                x3_C_cnd + x4_rcs_1_C_cnd + x4_rcs_2_C_cnd + x4_rcs_3_C_cnd + 
-                x3_x4_rcs_1_interaction_C + x3_x4_rcs_2_interaction_C + x3_x4_rcs_3_interaction_C, data = data)
+fit.c <- lm(y ~ x1_cat2_C + x2_cat2_C + x2_cat3_C + x3_C + x4_rcs_1_C + x4_rcs_2_C + x4_rcs_3_C + x5_C +
+                # interaction terms of x1 * x2
+                x1_cat2_by_x2_cat2_C + x1_cat2_by_x2_cat3_C +
+                # interaction terms of x2 * x3
+                x2_cat2_by_x3_C + x2_cat3_by_x3_C +
+                # interaction terms of x3 * x5
+                x3_by_x5_C +
+                # interaction terms of x2 * rcs(x4, k_x4)
+                x2_cat2_by_x4_rcs_1_C + 
+                x2_cat3_by_x4_rcs_1_C + 
+                x2_cat2_by_x4_rcs_2_C + 
+                x2_cat3_by_x4_rcs_2_C + 
+                x2_cat2_by_x4_rcs_3_C + 
+                x2_cat3_by_x4_rcs_3_C +
+                # interaction terms of x3 * rcs(x4, k_x4)
+                x3_by_x4_rcs_1_C + x3_by_x4_rcs_2_C + x3_by_x4_rcs_3_C, data = data)
 coef(fit.c)
-(pred <- predict(fit.c, newdata = data[1:5,]))
-
 ```
 
 ## test
 
 Using the original or centered model, using the same predictors should result in the same predicted values.
-
-```{r}
-# a test2 subset, only selecting the original predictors
-set.seed(100)
-test2 <- sample_n(data, 100)
-
-# predicted values using the original model
-test2$pred.o <- predict(fit.o, newdata = test2)
-
-# predicted values using the centered model
-test2$pred.c <- predict(fit.c, newdata = test2)
-
-# compare the predicted values
-test2$pred.o == test2$pred.c
-test2$pred.o - test2$pred.c
-```
 
 ```{r}
 # a test subset, only selecting the original predictors
@@ -526,61 +434,55 @@ test <- sample_n(data %>% select(x1:y), 100)
 # predicted values using the original model
 test$pred.o <- predict(fit.o, newdata = test)
 
-# get the centered values of the test subset
+# -------- add interaction terms --------
+test <- test %>% 
+  mutate(
+    # interaction terms of x1 * x2
+    x1_cat2_by_x2_cat2 = x1_cat2 * x2_cat2,
+    x1_cat2_by_x2_cat3 = x1_cat2 * x2_cat3,
+    # interaction terms of x2 * x3
+    x2_cat2_by_x3 = x2_cat2 * x3,
+    x2_cat3_by_x3 = x2_cat3 * x3,
+    # interaction terms of x3 * x5
+    x3_by_x5 = x3 * x5,
+    # interaction terms of x2 * rcs(x4, k_x4)
+    x2_cat2_by_x4_rcs_1 = x2_cat2 * x4_rcs_1,
+    x2_cat3_by_x4_rcs_1 = x2_cat3 * x4_rcs_1,
+    x2_cat2_by_x4_rcs_2 = x2_cat2 * x4_rcs_2,
+    x2_cat3_by_x4_rcs_2 = x2_cat3 * x4_rcs_2,
+    x2_cat2_by_x4_rcs_3 = x2_cat2 * x4_rcs_3,
+    x2_cat3_by_x4_rcs_3 = x2_cat3 * x4_rcs_3,
+    # interaction terms of x3 * rcs(x4, k_x4)
+    x3_by_x4_rcs_1 = x3 * x4_rcs_1,
+    x3_by_x4_rcs_2 = x3 * x4_rcs_2,
+    x3_by_x4_rcs_3 = x3 * x4_rcs_3
+  )
+
+# -------- centering each term --------
 test <- test %>%
   mutate(
-    x1_cat2_C_cnd = case_when(
-      x2 == 'x2_cat1' ~
-        x1_cat2 - mean(data$x1_cat2[which(data$x2 == 'x2_cat1')]),
-      x2 == 'x2_cat2' ~
-        x1_cat2 - mean(data$x1_cat2[which(data$x2 == 'x2_cat2')]),
-      x2 == 'x2_cat3' ~
-        x1_cat2 - mean(data$x1_cat2[which(data$x2 == 'x2_cat3')])
-    ),
-    x2_cat2_C_dir = x2_cat2 - mean(data$x2_cat2),
-    x2_cat3_C_dir = x2_cat3 - mean(data$x2_cat3),
-    x3_C_cnd = case_when(
-      x2 == 'x2_cat1' ~ x3 - mean(data$x3[which(data$x2 == 'x2_cat1')]),
-      x2 == 'x2_cat2' ~ x3 - mean(data$x3[which(data$x2 == 'x2_cat2')]),
-      x2 == 'x2_cat3' ~ x3 - mean(data$x3[which(data$x2 == 'x2_cat3')])
-    ),
-    x5_C_dir = x5 - mean(data$x5),
-    x3_x5_interaction_C2 = x3_x5_interaction - mean(data$x3_x5_interaction),
-    x4_rcs_1_C_cnd = case_when(
-      x2 == 'x2_cat1' ~
-        x4_rcs_1 - mean(data$x4_rcs_1[which(data$x2 == 'x2_cat1')]),
-      x2 == 'x2_cat2' ~
-        x4_rcs_1 - mean(data$x4_rcs_1[which(data$x2 == 'x2_cat2')]),
-      x2 == 'x2_cat3' ~
-        x4_rcs_1 - mean(data$x4_rcs_1[which(data$x2 == 'x2_cat3')])
-    ),
-    x4_rcs_2_C_cnd = case_when(
-      x2 == 'x2_cat1' ~
-        x4_rcs_2 - mean(data$x4_rcs_2[which(data$x2 == 'x2_cat1')]),
-      x2 == 'x2_cat2' ~
-        x4_rcs_2 - mean(data$x4_rcs_2[which(data$x2 == 'x2_cat2')]),
-      x2 == 'x2_cat3' ~
-        x4_rcs_2 - mean(data$x4_rcs_2[which(data$x2 == 'x2_cat3')])
-    ),
-    x4_rcs_3_C_cnd = case_when(
-      x2 == 'x2_cat1' ~
-        x4_rcs_3 - mean(data$x4_rcs_3[which(data$x2 == 'x2_cat1')]),
-      x2 == 'x2_cat2' ~
-        x4_rcs_3 - mean(data$x4_rcs_3[which(data$x2 == 'x2_cat2')]),
-      x2 == 'x2_cat3' ~
-        x4_rcs_3 - mean(data$x4_rcs_3[which(data$x2 == 'x2_cat3')])
-    ),
-    x3_x4_rcs_1_interaction = x3 * x4_rcs_1,
-    x3_x4_rcs_2_interaction = x3 * x4_rcs_2,
-    x3_x4_rcs_3_interaction = x3 * x4_rcs_3
-  ) %>%
-  mutate(
-    x3_x4_rcs_1_interaction_C = x3_x4_rcs_1_interaction -
-      mean(data$x3_x4_rcs_1_interaction),
-    x3_x4_rcs_2_interaction_C = x3_x4_rcs_2_interaction -
-      mean(data$x3_x4_rcs_2_interaction),
-    x3_x4_rcs_3_interaction_C = x3_x4_rcs_3_interaction -
-      mean(data$x3_x4_rcs_3_interaction)
+    x1_cat2_C = x1_cat2 - mean(data$x1_cat2),
+    x2_cat2_C = x2_cat2 - mean(data$x2_cat2),
+    x2_cat3_C = x2_cat3 - mean(data$x2_cat3),
+    x1_cat2_by_x2_cat2_C = x1_cat2_by_x2_cat2 - mean(data$x1_cat2_by_x2_cat2),
+    x1_cat2_by_x2_cat3_C = x1_cat2_by_x2_cat3 - mean(data$x1_cat2_by_x2_cat3),
+    x3_C = x3 - mean(data$x3),
+    x2_cat2_by_x3_C = x2_cat2_by_x3 - mean(data$x2_cat2_by_x3),
+    x2_cat3_by_x3_C = x2_cat3_by_x3 - mean(data$x2_cat3_by_x3),
+    x5_C = x5 - mean(data$x5),
+    x3_by_x5_C = x3_by_x5 - mean(data$x3_by_x5),
+    x4_rcs_1_C = x4_rcs_1 - mean(data$x4_rcs_1),
+    x4_rcs_2_C = x4_rcs_2 - mean(data$x4_rcs_2),
+    x4_rcs_3_C = x4_rcs_3 - mean(data$x4_rcs_3),
+    x2_cat2_by_x4_rcs_1_C = x2_cat2_by_x4_rcs_1 - mean(data$x2_cat2_by_x4_rcs_1),
+    x2_cat3_by_x4_rcs_1_C = x2_cat3_by_x4_rcs_1 - mean(data$x2_cat3_by_x4_rcs_1),
+    x2_cat2_by_x4_rcs_2_C = x2_cat2_by_x4_rcs_2 - mean(data$x2_cat2_by_x4_rcs_2),
+    x2_cat3_by_x4_rcs_2_C = x2_cat3_by_x4_rcs_2 - mean(data$x2_cat3_by_x4_rcs_2),
+    x2_cat2_by_x4_rcs_3_C = x2_cat2_by_x4_rcs_3 - mean(data$x2_cat2_by_x4_rcs_3),
+    x2_cat3_by_x4_rcs_3_C = x2_cat3_by_x4_rcs_3 - mean(data$x2_cat3_by_x4_rcs_3),
+    x3_by_x4_rcs_1_C = x3_by_x4_rcs_1 - mean(data$x3_by_x4_rcs_1),
+    x3_by_x4_rcs_2_C = x3_by_x4_rcs_2 - mean(data$x3_by_x4_rcs_2),
+    x3_by_x4_rcs_3_C = x3_by_x4_rcs_3 - mean(data$x3_by_x4_rcs_3)
   )
 
 # predicted values using the centered model
